# ECIR2022-AnEvaluationStudyOfGANsForCF

./: .gitignore  CITATION.cff  README.md
evaluation-cfgan/: .gitignore  README.md  main.py  pyproject.toml
evaluation-cfgan/experiments/: commons.py  concerns.py  replication.py  reproducibility.py
evaluation-cfgan/tests/consistency/: test_metrics.py
evaluation-cfgan/tests/experiments/: test_concerns.py  test_replication.py  test_reproducibility.py
recsys-framework/: .gitignore  README.md  build.py  pyproject.toml  run_compile_all_cython.py  run_example_usage.py
recsys-framework/recsys_framework/Data_manager/: DataReader.py  DataReader_utils.py  DataSplitter.py  DataSplitter_k_fold_random.py  DataSplitter_leave_k_out.py  Dataset.py  IncrementalSparseMatrix.py  TagPreprocessing.py  data_consistency_check.py  load_and_save_data.py
recsys-framework/recsys_framework/Data_manager/AmazonReviewData/: AmazonMoviesTVReader.py  AmazonMusicReader.py  _AmazonReviewDataReader.py
recsys-framework/recsys_framework/Data_manager/Epinions/: EpinionsReader.py
recsys-framework/recsys_framework/Data_manager/FilmTrust/: FilmTrustReader.py
recsys-framework/recsys_framework/Data_manager/Frappe/: FrappeReader.py
recsys-framework/recsys_framework/Data_manager/Gowalla/: GowallaReader.py
recsys-framework/recsys_framework/Data_manager/Movielens/: Movielens100KReader.py  Movielens10MReader.py  Movielens1MReader.py  Movielens20MReader.py  MovielensHetrec2011Reader.py  _utils_movielens_parser.py
recsys-framework/recsys_framework/Data_manager/NetflixPrize/: NetflixPrizeReader.py
recsys-framework/recsys_framework/Data_manager/split_functions/: split_data_on_timestamp.py  split_train_validation.py  split_train_validation_leave_k_out.py
recsys-framework/recsys_framework/Evaluation/: Evaluator.py  metrics.py
recsys-framework/recsys_framework/HyperparameterTuning/: SearchAbstractClass.py  SearchBayesianSkopt.py  SearchSingleCase.py  run_parameter_search.py
recsys-framework/recsys_framework/Recommenders/: BaseCBFRecommender.py  BaseMatrixFactorizationRecommender.py  BaseRecommender.py  BaseSimilarityMatrixRecommender.py  BaseTempFolder.py  DataIO.py  Incremental_Training_Early_Stopping.py  NonPersonalizedRecommender.py  Recommender_import_list.py  __init__.py
recsys-framework/recsys_framework/Recommenders/EASE_R/: EASE_R_Recommender.py
recsys-framework/recsys_framework/Recommenders/GraphBased/: P3alphaRecommender.py  RP3betaRecommender.py
recsys-framework/recsys_framework/Recommenders/Hybrid/: HybridContentBasedRecommender.py
recsys-framework/recsys_framework/Recommenders/KNN/: ItemKNNCBFRecommender.py  ItemKNNCFRecommender.py  ItemKNNCustomSimilarityRecommender.py  ItemKNN_CFCBF_Hybrid_Recommender.py  UserKNNCBFRecommender.py  UserKNNCFRecommender.py  UserKNN_CFCBF_Hybrid_Recommender.py
recsys-framework/recsys_framework/Recommenders/MatrixFactorization/: IALSRecommender.py  NMFRecommender.py  PureSVDRecommender.py
recsys-framework/recsys_framework/Recommenders/SLIM/: SLIMElasticNetRecommender.py
recsys-framework/recsys_framework/Recommenders/Similarity/: Compute_Similarity.py  Compute_Similarity_Python.py  Compute_similarity_euclidean_test.py  Compute_similarity_test.py
recsys-framework/recsys_framework/Utils/: ResultFolderLoader.py  assertions_on_data_for_experiments.py  conf_dask.py  decorators.py  plot_popularity.py  plotting.py  print_negative_items_stats.py
recsys-framework/tests/Data_manager/: IncrementalSparseMatrix_test.py
recsys-framework/tests/Evaluation/: metrics_Test.py
recsys-framework/tests/Recommenders/: Recommender_utils_Test.py  test_dataio.py
(+34 files in other folders)
